修复添加题目错误

--- a/views/reg.html
+++ b/views/reg.html
@@ -80,7 +80,7 @@ function CheckForm()
 	{{if .IsError}}
 		<font color=red>{{.ErrorMsg}}</font><a href="/reg" target="_self">返回</a>
 	{{else}}
-		{{.ExecOut}}
+		{{.UserName}} 注册成功！
 	{{end}}
 {{end}}
 </body>
